[gd_scene load_steps=7 format=3 uid="uid://bfuxruit6j00y"]

[ext_resource type="Script" path="res://scripts/screens/main_menu.gd" id="1_tu54w"]
[ext_resource type="PackedScene" uid="uid://78r8aayx75rh" path="res://scenes/ui/main_menu_button.tscn" id="2_ve7e8"]
[ext_resource type="Shader" path="res://shaders/options_background.gdshader" id="2_xfwm7"]
[ext_resource type="FontFile" uid="uid://ca744fnf8qt4u" path="res://fonts/BluebirdLi.otf" id="3_qqr8d"]
[ext_resource type="Texture2D" uid="uid://21hgsa3orbpt" path="res://art/fond_blanc.png" id="3_t2u86"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dhqd"]
shader = ExtResource("2_xfwm7")
shader_parameter/blue = 0.9

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tu54w")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1dhqd")
position = Vector2(360, 540)
texture = ExtResource("3_t2u86")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 143.0
offset_top = 387.0
offset_right = 593.0
offset_bottom = 759.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SinglePlayerButton" parent="VBoxContainer" instance=ExtResource("2_ve7e8")]
layout_mode = 2
text = "Single Player"

[node name="CreditButton" parent="VBoxContainer" instance=ExtResource("2_ve7e8")]
layout_mode = 2
text = "Credits"

[node name="SettingsButton" parent="VBoxContainer" instance=ExtResource("2_ve7e8")]
layout_mode = 2
text = "Settings"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource("2_ve7e8")]
layout_mode = 2
text = "Quit"

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 85.0
offset_top = 1.0
offset_right = 686.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_qqr8d")
theme_override_font_sizes/font_size = 128
text = "Fall Ducks"

[connection signal="pressed" from="VBoxContainer/SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
